bug: 29918 - checkpoint -- - added right padding betw. icon and label for zimlet and local account headers - remember zimlet tree expand/collapsed state - hide Drafts/Outbox in all accounts except Local Folder - Drafts/Outbox searches all accounts
http://bugzilla.zimbra.com/show_bug.cgi?id=29918

Copied from Perforce
 Change: 188577

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -184,6 +184,11 @@
 	cursor: pointer;
 }
 
+.ZmOverviewLocalHeader .imageCell,
+.ZmOverviewZimletHeader .imageCell {
+	@ImagePadding@
+}
+
 .ZmOverviewZimletHeader,
 .ZmOverviewZimletHeader-actioned,
 .ZmOverviewZimletHeader-selected,
